fix: 추가 - 사파리 Datetime 유틸 호환, CSS visibility
1. Datetime String에 대시(-) 들어가면, 파싱 에러나는 부분 해결
2. Option이 width:0, height:0이어도 보이는 점 해결

--- a/client/src/stylesheet/component/AddRecordForm.scss
+++ b/client/src/stylesheet/component/AddRecordForm.scss
@@ -57,6 +57,7 @@
   }
 
   .switch_field input[type='radio'] {
+    visibility: hidden;
     width: 0;
     height: 0;
     overflow: hidden;
